# chicky

./: CHANGELOG.rst  Makefile  README.rst  cookiebaked.json  freezer.py  frozen.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
chicky/: __init__.py  core.py  exceptions.py  hello.py
chicky/cli/: entrypoint.py  greet.py  version.py
docs/: cli.rst  command_parser.py  conf.py  development.rst  install.rst  overview.rst  sphinx_reload.py
docs/_static/: command.rst
docs/references/: core.rst  exceptions.rst  hello.rst  index.rst  logger.rst
tests/: 0010_checksum.py  0020_collect.py  0100_cli_chicky.py  conftest.py
tests/0010_core/: 0010_checksum.py
tests/001_hello/: 001_hello_base.py  02_hello_html.py
tests/100_cli/: 001_cli_version.py  010_greet.py
