;;
;; Chicky package
;;
[metadata]
name = chicky
version = 0.2.0-pre.3
description = A simple tool to create checksum for files from a directory
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/chicky
project_urls =
    Source Code = https://github.com/sveetch/chicky
    Issue Tracker = https://github.com/sveetch/chicky/issues
    Changelog = https://chicky.readthedocs.io/en/latest/history.html
    Documentation = https://chicky.readthedocs.io/
license = MIT
keywords = Python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest>=7.0
    freezegun>=1.2.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    chicky = chicky.cli.entrypoint:main

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,39,311}

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
